# persona

./: .env.example  .envrc  .gitignore  .mcp.json  .tool-versions  Cargo.toml  README.md  persona
.claude/: settings.json
.claude/commands/: create-persona.md
.claude/hooks/: mentor-session-start.sh
.github/workflows/: release.yml
.opencode/: opencode.jsonc  package.json
.opencode/commands/: tech-review-professional-assessment.md
.opencode/plugin/: destructive-protection.ts  env-protection.ts  mentor-session-start.ts
assets/: AppIcon.icns  Info.plist.template  README.md  entitlements.plist  gen-appicon.sh
conversations/: mentor-staff-2026-01-13_093309.md
docs/: conversations.md  develop.md  persona.md  usage.md
docs/app/: PLAN.md
personas/: personal-assistant.md  senior-to-staff-developer.md  staff-trajectory-mentor.md  systems-designer.md  tech-review-professional.md
personas/kb/personal-assistant/: code-review-2026-02-04.md  meeting-notes.md  project-overview.md  workflow-preferences.md
scripts/: bundle-macos.sh  prepare-data-bundle.sh
src/: app.rs  http.rs  main.rs
src/config/: app.rs  berry.rs  data.rs  general.rs  mod.rs  personas.rs  terminal.rs
src/knowledgebase/: mod.rs
src/memory/: mod.rs  types.rs
src/persona/: mod.rs
src/state/: mod.rs
src/terminal/: mod.rs  theme.rs
src/ui/: conversation.rs  mod.rs  navigation.rs  persona_list.rs  window.rs
src/ui/memory/: knowledgebase_slideout.rs  knowledgebase_table.rs  knowledgebase_view.rs  mod.rs  slideout.rs  table.rs
src/ui/persona/: conversation.rs  list.rs  mod.rs  panel.rs  tabs.rs  terminal_header_bar.rs
src/ui/settings/: general_settings.rs  memory_settings.rs  mod.rs  personas_settings.rs  terminal_settings.rs
src/ui/theme/: catppuccin.json  gruvbox.json  kanagawa.json  theme.rs  tokyo-night.json
src/ui/workspace/: footer_bar.rs  header_bar.rs  mod.rs
