[package]
name = "persona"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
gpui-terminal = "0.1"
gpui-tokio-bridge = "0.1"
core-text = "=21.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
dirs = "6.0"
portable-pty = "0.9"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.15"
